force-app/main/default/objects/Contact/fields/Address_Loaded_Time__c.field-meta.xml
<CustomField>
    <fullName>Address_Loaded_Time__c</fullName>
    <description>For cache TTL purposes</description>
    <inlineHelpText>For cache TTL purposes</inlineHelpText>
    <label>Address Loaded Time</label>
    <type>DateTime</type>
</CustomField>