force-app/main/default/objects/Contact/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Customer&apos;s Age</description>
    <inlineHelpText>Customer&apos;s Age</inlineHelpText>
    <label>Age</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>