force-app/main/default/objects/Contact/fields/CIP_Status__c.field-meta.xml
<CustomField>
    <fullName>CIP_Status__c</fullName>
    <description>Customer&apos;s CIP status</description>
    <inlineHelpText>Customer&apos;s CIP status</inlineHelpText>
    <label>CIP Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>