force-app/main/default/objects/Contact/fields/Email_Loaded_Time__c.field-meta.xml
<CustomField>
    <fullName>Email_Loaded_Time__c</fullName>
    <description>For cache TTL purposes</description>
    <inlineHelpText>For cache TTL purposes</inlineHelpText>
    <label>Email Loaded Time</label>
    <type>DateTime</type>
</CustomField>