force-app/main/default/objects/Contact/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>Full Name of the customer. This value comes from PayPal domain and we need a separate field since Name in Contact object is not writable.</description>
    <inlineHelpText>Full Name of the customer.</inlineHelpText>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>