force-app/main/default/objects/Contact/fields/Party_Id__c.field-meta.xml
<CustomField>
    <fullName>Party_Id__c</fullName>
    <description>Party Id that identifies the User/Party in PayPal system</description>
    <externalId>true</externalId>
    <inlineHelpText>Party Id that identifies the User/Party in PayPal system</inlineHelpText>
    <label>Party Id</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>