force-app/main/default/objects/Contact/fields/Party_Info_Loaded_Time__c.field-meta.xml
<CustomField>
    <fullName>Party_Info_Loaded_Time__c</fullName>
    <label>Party Info Loaded Time</label>
    <type>DateTime</type>
</CustomField>