force-app/main/default/objects/Contact/fields/Profile_Picture__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture__c</fullName>
    <description>Customer&apos;s profile picture</description>
    <inlineHelpText>Customer&apos;s profile picture</inlineHelpText>
    <label>Profile Picture</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>