force-app/main/default/objects/Contact/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <description>Tenant Name in the multi-tenant shared environment</description>
    <inlineHelpText>Tenant Name in the multi-tenant shared environment</inlineHelpText>
    <label>Tenant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tenant</valueSetName>
    </valueSet>
</CustomField>